--- a/ServiceA/ServiceA.csproj
+++ b/ServiceA/ServiceA.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Dapr.AspNetCore" Version="1.15.2"/>
         <PackageReference Include="Grpc.AspNetCore" Version="2.70.0"/>
+        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
