--- a/ServiceA/ServiceA.csproj
+++ b/ServiceA/ServiceA.csproj
@@ -7,21 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapr.Client" Version="1.15.2"/>
         <PackageReference Include="Dapr.AspNetCore" Version="1.15.2"/>
         <PackageReference Include="Grpc.AspNetCore" Version="2.70.0"/>
         <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Protobuf Include="..\Shared\protos\v1\weather.proto"
-                  GrpcServices="Server"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.9.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="9.0.3"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj"/>
+        <ProjectReference Include="..\Shared\Shared.csproj"/>
     </ItemGroup>
 
 </Project>
